Fix image overflow

--- a/src/templates/post.css
+++ b/src/templates/post.css
@@ -2,3 +2,7 @@ article {
   max-width: 800px;
   margin: 48px auto;
 }
+
+img {
+  width: 100%;
+}
